se agrega nuevas paginas y cambios en carpetas

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./pages/noticias.html">Noticias</a></li>
                 <li><a href="./pages/fixture.html">Calendario</a></li>
-                <li><a href="">Historia</a></li>
-                <li><a href="">Contacto</a></li>
+                <li><a href="./pages/historia.html">Historia</a></li>
+                <li><a href="./pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -45,11 +45,11 @@
             </div>
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Noticias</a></li>
-                    <li><a href="#">Calendario</a></li>
-                    <li><a href="">Historia</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="./pages/noticias.html">Noticias</a></li>
+                    <li><a href="./pages/fixture.html">Calendario</a></li>
+                    <li><a href="./pages/historia.html">Historia</a></li>
+                    <li><a href="./pages/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
