--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../Assets/Imagenes/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../CSS/style4.css">
-    <title>Historia</title>
+    <link rel="stylesheet" href="../CSS/style5.css">
+    <title>Contacto</title>
 </head>
 <body>
     <header>
@@ -25,18 +25,13 @@
             </ul>
         </nav>
     </header>
-
-
     <main>
-        <section id="seccion-texto">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta neque doloribus, pariatur vel, dignissimos fugiat iure odio consectetur consequuntur dolorum, enim voluptate non obcaecati! Expedita ipsum dolore voluptatem? Natus officia accusamus laudantium molestias illo quia eaque saepe accusantium modi ullam cupiditate dolores aperiam quisquam animi et soluta quibusdam, distinctio magni.</p>
-        </section>
-        <section id="seccion-imagen">
-            <img src="../Assets/Imagenes/imagen estadio historia.jpg" alt="imagen estadio">
-        </section>
+        <div id="contenedor">
+            <section class="division-titulo">Contacta con Belgrano</section>
+            <p class="division-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque inventore nulla mollitia. Rem sit modi eos placeat non officia quis, necessitatibus labore unde, hic incidunt?</p>
+        </div>
     </main>
-
-
+    
     <footer>
         <div class="footer-contenido">
             <div class="logo">
@@ -56,5 +51,6 @@
             <p class="footer-text">© 2023 Club Atletico Belgrano. Todos los derechos son reservados.</p>
         </div>
     </footer>
+
 </body>
 </html>
