--- a/pages/fixture.html
+++ b/pages/fixture.html
@@ -20,8 +20,8 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../pages/noticias.html">Noticias</a></li>
                 <li><a href="../pages/fixture.html">Calendario</a></li>
-                <li><a href="">Historia</a></li>
-                <li><a href="">Contacto</a></li>
+                <li><a href="../pages/historia.html">Historia</a></li>
+                <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -31,22 +31,21 @@
         <div id="calendario">
             <div class="partido">
                 <div class="equipo local">
-                    <img src="../Assets/Imagenes/escudo.png" alt="equipo local">
-                </div>
+                    <img src="" alt="equipo local">
                 <div class="contra">vs
                     <div class="equipo visitante">
-                        <img src="../Assets/Imagenes/equipos fixtur/escudo san lorenzo.png" alt="equipo visitante">
+                        <img src="" alt="equipo visitante">
                     </div>
                 </div>
             </div>
             </div>
             <div class="partido">
                 <div class="equipo local">
-                    <img src="../Assets/Imagenes/equipos fixtur/escudo estudiantes.png" alt="equipo local">
+                    <img src="" alt="equipo local">
                 </div>
                 <div class="contra">vs
                     <div class="equipo visitante">
-                        <img src="../Assets/Imagenes/escudo.png" alt="equipo visitante">
+                        <img src="" alt="equipo visitante">
                     </div>
                 </div>
             </div>
