--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -20,8 +20,8 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../pages/noticias.html">Noticias</a></li>
                 <li><a href="../pages/fixture.html">Calendario</a></li>
-                <li><a href="">Historia</a></li>
-                <li><a href="">Contactos</a></li>
+                <li><a href="../pages/historia.html">Historia</a></li>
+                <li><a href="../pages/contacto.html">Contactos</a></li>
             </ul>
         </nav>
     </header>
@@ -60,6 +60,7 @@
             </nav>
         </div>
         <p class="footer-text">© 2023 Club Atletico Belgrano. Todos los derechos son reservados.</p>
+        
     </footer>
 </body>
 </html>
