--- a/pages/fixture.html
+++ b/pages/fixture.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../Assets/Imagenes/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../CSS/style2.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Calendario</title>
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="../Assets/Imagenes/escudo.png" alt="logo">
-        </div>
-        <div class="nombre-logo">
-            <h1>BELGRANO</h1>
-        </div>
-        <nav id="navheader">
+        <nav id="nav-header">
+            <div id="logo-header">
+                <img src="../Assets/Imagenes/escudo.png" alt="logo">
+            </div>
+            <div id="nombre-logo">
+                <h1>BELGRANO</h1>
+            </div>
             <ul id="menu">
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../pages/noticias.html">Noticias</a></li>
@@ -26,38 +27,48 @@
         </nav>
     </header>
 
-    <main>
-        <div><h2>Calendario Primer Equipo</h2></div>
-        <div id="calendario">
-            <div class="partido">
-                <div class="equipo local">
-                    <img src="" alt="equipo local">
-                <div class="contra">vs
-                    <div class="equipo visitante">
-                        <img src="" alt="equipo visitante">
-                    </div>
+    <main class="mainCalendario">
+        <div class="contenedorCalendario">
+            <section class="tituloCalendario">Calendario Primer Equipo</section>
+            <section class="partidos">
+                <div class="partido">
+                    <div class="fecha">Fecha 26</div>
+                    <div class="equipos">Belgrano vs San Lorenzo</div>
                 </div>
-            </div>
-            </div>
-            <div class="partido">
-                <div class="equipo local">
-                    <img src="" alt="equipo local">
+                <div class="partido">
+                    <div class="fecha">Fecha 27</div>
+                    <div class="equipos">Estudiantes vs Belgrano</div>
                 </div>
-                <div class="contra">vs
-                    <div class="equipo visitante">
-                        <img src="" alt="equipo visitante">
-                    </div>
+                <div class="partido">
+                    <div class="fecha">Fecha 28</div>
+                    <div class="equipos">Belgrano vs Rosario Central</div>
                 </div>
-            </div>
-            </div>
-        </div>
-        <div>
-
+                
+            </section>
         </div>
     </main>
 
     <footer>
-
+        <div class="footer-contenido">
+            <div class="logo">
+                <img src="../Assets/Imagenes/escudo.png" alt="escudo">
+            </div>
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../pages/noticias.html">Noticias</a></li>
+                    <li><a href="../pages/fixture.html">Calendario</a></li>
+                    <li><a href="../pages/historia.html">Historia</a></li>
+                    <li><a href="../pages/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+    </div>
+        </div>
+            <p class="footer-text">© 2023 Club Atletico Belgrano. Todos los derechos son reservados.</p>
+        </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
+
