--- a/pages/historia.html
+++ b/pages/historia.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../Assets/Imagenes/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../CSS/style4.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Historia</title>
 </head>
 <body>
@@ -27,11 +28,11 @@
     </header>
 
 
-    <main>
-        <section id="seccion-texto">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta neque doloribus, pariatur vel, dignissimos fugiat iure odio consectetur consequuntur dolorum, enim voluptate non obcaecati! Expedita ipsum dolore voluptatem? Natus officia accusamus laudantium molestias illo quia eaque saepe accusantium modi ullam cupiditate dolores aperiam quisquam animi et soluta quibusdam, distinctio magni.</p>
+    <main class="mainHistoria">
+        <section class="textoHistoria">
+            <p>Un 19 de marzo de 1905, bajo la sombra de un árbol de algarrobo en barrio Alberdi, se realizó la asamblea que dio vida al Club Atlético Belgrano. Es por eso que aún la institución guarda ese matiz de club de Argentina, y es la idiosincrasia que lo caracteriza. El nombre de la entidad estuvo inspirado en honor al General Manuel Belgrano, ya que la reunión más importante se había llevado a cabo el día antes de un nuevo aniversario de la creación de la bandera nacional. De allí también los colores de la indumentaria deportiva del club. En otro ámbito de sucesos, cabe destacar la edad del primer presidente de la institución, quien tenía tan solo 14 años.</p>
         </section>
-        <section id="seccion-imagen">
+        <section class="imagenHistoria">
             <img src="../Assets/Imagenes/imagen estadio historia.jpg" alt="imagen estadio">
         </section>
     </main>
@@ -56,5 +57,7 @@
             <p class="footer-text">© 2023 Club Atletico Belgrano. Todos los derechos son reservados.</p>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
