--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav id="nav-header">
             <div id="logo-header">
-                <img src="./assets/Imagenes/escudo.png" alt="logo">
+                <img src="./assets/imagenes/escudo.png" alt="logo">
             </div>
             <div id="nombre-logo">
                 <h1>BELGRANO</h1>
@@ -29,10 +29,10 @@
     
     <main class="mainInicio">
         <div class="imagen1Inicio">
-                <img src="./assets/Imagenes/belgrano jugador.jpg" alt="imagen 1">
+                <img src="./assets/imagenes/belgrano jugador.jpg" alt="imagen 1">
         </div>
         <div class="imagen2Inicio">
-            <img src="./assets/Imagenes/imagen belgrano jugadores.jpg" alt="imagen 2">
+            <img src="./assets/imagenes/imagen belgrano jugadores.jpg" alt="imagen 2">
         </div>
         <aside class="textoInicio">
             <p>¡Bienvenido al sitio web del Club Atlético Belgrano! Nos complace darte la más cordial bienvenida a nuestra página principal, donde encontrarás todo lo relacionado con uno de los clubes de fútbol más emblemáticos de Argentina.
@@ -46,7 +46,7 @@
     <footer>
         <div class="footer-contenido">
             <div class="logo">
-                <img src="./assets/Imagenes/escudo.png" alt="escudo">
+                <img src="./assets/imagenes/escudo.png" alt="escudo">
             </div>
             <nav class="footer-nav">
                 <ul>
